# byu-competition

./: .gitignore  pyproject.toml
notebooks/: evaluate.ipynb  exploration.ipynb  parse_data.ipynb  sumission.ipynb
src/: __init__.py
