[tool.poetry]
name = "byu-locating-bacterial-flagellar-motors-2025"
version = "0.1.0"
description = ""
authors = ["Gaétan Dubuc <gaet.dub1@gmail.com>"]
readme = "README.md"
packages = [{ include = "motors", from = "./src" }]


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
tensorflow = "^2.19.0"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
