[tool.poetry]
name = "byu-locating-bacterial-flagellar-motors-2025"
version = "0.1.0"
description = ""
authors = ["Gaétan Dubuc <gaet.dub1@gmail.com>"]
readme = "README.md"
packages = [{ include = "motors", from = "./src" }]


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"
globox = "^2.6.0"
transformers = "^4.51.3"
keras-hub = "^0.20.0"
tensorflow = "^2.19.0"
keras-cv = "^0.9.0"
tf-keras = "^2.19.0"
torch = "^2.7.0"
torchvision = "^0.22.0"
opencv-python-headless = "^4.11.0.86"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
